# ContextClutch

./: .gitignore  Dockerfile  README.md  deploy_gcp.sh  docker-compose.yml  requirements.txt  test_clutch.py
examples/: langchain_demo.py
sdk/: README.md  pyproject.toml  setup.py
sdk/context_clutch/: __init__.py  client.py
src/: main.py
src/templates/: hipaa.json
tests/: test_compliance.py  test_execute.py  test_proxy.py
