[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-clutch"
version = "0.1.0"
description = "Enterprise API Gateway & Sandbox Proxy to protect LLM context windows. Drop-in LangChain tool included."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Scott Guida"}
]
keywords = ["llm", "langchain", "agent", "proxy", "sandbox", "context-window", "hipaa", "dlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.20.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]

[project.urls]
Homepage = "https://github.com/scottxxxxx/ContextClutch"
Repository = "https://github.com/scottxxxxx/ContextClutch"
Issues = "https://github.com/scottxxxxx/ContextClutch/issues"

[tool.setuptools.packages.find]
include = ["context_clutch*"]
